🐋🏄 Checkpoint ./Kevin.js:30896182/467 ./style.css:30896182/173 ./index.html:30896182/7

--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@
 h1 {
   font-style: italic;
   color:green;
+  
 }
 li{
-  color:blue;
+  color:black;
   font-size:40px;
+  background-color:powderblue;
 }
