🔋📯 Checkpoint ./index.html:30896182/4 ./style.css:30896182/38 ./Kevin.js:30896182/15429

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 h1 {
   font-style: italic;
-  color:red;
+  color:purple;
   
 }
 li{
@@ -11,5 +11,5 @@ li{
   background-color:powderblue;
 }
 body{
-  background-color:lime;
+  background-color:white;
 }
